--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h2>Title</h2>
         <div class="section2-mobile">
-            <img src="./Public/assets/icons/company-logo.png" alt="">
+            <img src="./company-logo.png" alt="">
         </div>
         <div class="inner-container">
             <div class="section">
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="section2">
-                <img src="./Public/assets/icons/company-logo.png" alt="">
+                <img src="./company-logo.png" alt="">
             </div>
             <div class="section">
                 <div class="grid-element">
