--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <div class="inner-container">
             <div class="section">
                 <div class="grid-element">
-                    <img src="./Public/assets/icons/edit.png" alt="">
+                    <img src="./edit.png" alt="">
                     <h3 class="title">Hello1</h3>
                     <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati distinctio
                         veritatis voluptate sint itaque maiores enim odit, dolores cum molestiae! Ut, voluptas
                         reprehenderit. Culpa nobis minima facere ducimus dolorem explicabo?</p>
                 </div>
                 <div class="grid-element">
-                    <img src="./Public/assets/icons/edit.png" alt="">
+                    <img src="./edit.png" alt="">
                     <h3 class="title">Hello1</h3>
                     <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, error.</p>
                 </div>
@@ -34,12 +34,12 @@
             </div>
             <div class="section">
                 <div class="grid-element">
-                    <img src="./Public/assets/icons/edit.png" alt="">
+                    <img src="./edit.png" alt="">
                     <h3 class="title">Hello1</h3>
                     <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, error.</p>
                 </div>
                 <div class="grid-element">
-                    <img src="./Public/assets/icons/edit.png" alt="">
+                    <img src="./edit.png" alt="">
                     <h3 class="title">Hello1</h3>
                     <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati distinctio
                         veritatis voluptate sint itaque maiores enim odit, dolores cum molestiae! Ut, voluptas
